--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merge Food - Chef Decoration</title>
-    <link rel="icon" href="img/Fav B.png" />
+    <title>Puzzle Glow : Brain Puzzle Gam</title>
+    <link rel="icon" href="image/fav_500.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -23,12 +23,7 @@
           <li class="navigation__item">
             <a href="/" class="navigation__link">Home</a>
           </li>
-          <li class="navigation__item">
-            <a href="/#why" class="navigation__link">Why Us?</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#uniqueness" class="navigation__link">Our Uniqueness</a>
-          </li>
+
           <li class="navigation__item">
             <a href="/#about" class="navigation__link">About the Game</a>
           </li>
@@ -36,19 +31,16 @@
             <a href="/#how" class="navigation__link">How to Play</a>
           </li>
           <li class="navigation__item">
-            <a href="/#characters" class="navigation__link">Characters</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">User Reviews</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#faq" class="navigation__link">FAQ</a>
+            <a href="/#features" class="navigation__link">Game Features</a>
           </li>
           <li class="navigation__item">
             <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
           <li class="navigation__item">
-            <a href="/#features" class="navigation__link">Special Features</a>
+            <a href="/#reviews" class="navigation__link">Reviews</a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#faq" class="navigation__link">FAQ</a>
           </li>
         </ul>
 
@@ -60,13 +52,13 @@
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/burger.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="img/header//menu (1).png"
+              src="image/header/close.png"
               alt=""
             />
           </button>
@@ -77,13 +69,13 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h2 class="policy-terms-title">TERMS and CONDITIONS</h2>
+          <h2 class="policy-terms-title">Terms & Conditions</h2>
 
           <p class="policy-terms-text-one">
-            These terms and conditions applies to the Merge Food - Chef
-            Decoration app (hereby referred to as "Application") for mobile
-            devices that was created by (hereby referred to as "Service
-            Provider") as a Free service.
+            These terms and conditions apply to the Puzzle Glow : Brain Puzzle
+            Gam app (hereby referred to as "Application") for mobile devices
+            that was created by (hereby referred to as "Service Provider") as a
+            Free service.
           </p>
 
           <p class="policy-terms-text-one">
@@ -227,14 +219,16 @@
           </p>
 
           <p class="policy-terms-text-one">
-            These terms and conditions are effective as of 2024-12-23
+            These terms and conditions are effective as of 2025-01-21
           </p>
           <h2 class="policy-terms-text">Contact Us</h2>
           <p class="policy-terms-texts">
             If you have any questions or suggestions about the Terms and
             Conditions, please do not hesitate to contact the Service Provider
             at
-            <a class="email-link" href="mailto:MF@info.com">MF@info.com</a>.
+            <a class="email-link" href="mailto:info@blissgamehub.com"
+              >info@blissgamehub.com</a
+            >.
           </p>
         </div>
       </section>
@@ -243,11 +237,12 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-wrapper">
-          <a class="footer-text" href="policy.html">Privacy policy</a>
-          <a class="footer-text">|</a>
+          <a class="footer-text" href="policy.html">Privacy Policy</a>
           <a class="footer-text" href="terms.html">Terms & Conditions</a>
         </div>
-        <p class="footer-copyright">All rights reserved ©2024 EpicPath.Games</p>
+        <p class="footer-copyright">
+          ©2025 blissgamehub.com, All rights reserved.
+        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
